responsive iframe + suppression padding years section

--- a/home.html
+++ b/home.html
@@ -110,12 +110,12 @@
   <div class="site-section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="col-lg-6 mb-5 mb-lg-0 px-0">
           <div class="img-years">
-            <iframe width="600" height="362" src="https://www.youtube.com/embed/UCgFKj7Buds"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+            <div class="video-container"> <iframe class="responsive-iframe" width="600" height="362"
+                src="https://www.youtube.com/embed/UCgFKj7Buds" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
             <div class="year">
               <span>3 <span>offres <br>adaptées <br>à vos besoins</span></span>
             </div>
