remove active link on navbar

--- a/home.html
+++ b/home.html
@@ -71,12 +71,12 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Chasse</a></li>
-                <li><a href="services.html" class="nav-link">Vente</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Locations</a></li>
-                <li><a href="about.html" class="nav-link">Qui somme-nous?</a></li>
-                <li><a href="blog.html" class="nav-link">Nous contacter</a></li>
-                <li><a href="contact.html" class="nav-link">Espace Vision-R</a></li>
+                <li class="active"><a class="nav-link">Chasse</a></li>
+                <li><a class="nav-link">Vente</a></li>
+                <li><a class="nav-link">Locations</a></li>
+                <li><a class="nav-link">Qui somme-nous?</a></li>
+                <li><a class="nav-link">Nous contacter</a></li>
+                <li><a class="nav-link">Espace Vision-R</a></li>
               </ul>
             </nav>
           </div>
